[package]
name = "refault"
version = "0.1.0"
edition = "2024"

[features]
# default = ["send-bind"]
default = ["full"]
full = ["serde","tower","agnostic-lite"]
serde = ["dep:serde"]
tower = ["dep:tower"]
agnostic-lite = ["dep:agnostic-lite", "send-bind"]
send-bind = []

[dependencies]
futures = { version = "0.3.31", default-features = false, features = ["std"]}
libc = "1.0.0-alpha.1"
rand_core = { version = "0.9" }
rand_chacha = "0.9"
pin-project-lite = "0.2.16"
priority-queue = "2.0.0"
pin-arc = "0.2.1"
cooked-waker = "5"
either = "1.15"
scopeguard = "1.2"
futures-intrusive = "0.5"
typeid = "1"
serde = { optional = true, features = ["derive"], version = "1" }
tower = { optional = true, version = "0.5.2" }
agnostic-lite = { optional = true, version = "0.5.6", features = ["time"] }

[dev-dependencies]
getrandom = "0.3.3"
rand = "0.9"
tower = { version = "0.5.2", features = ["util"] }
