[package]
name = "refault"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "deterministic simulation framework for distributed systems using async"
repository = "https://github.com/m-mueller678/refault"
keywords = [
  "deterministic",
  "testing",
  "test-framework",
  "async",
  "distributed-systems",
]
categories = [
  "development-tools::testing",
  "development-tools::debugging",
  "simulation",
  "virtualization",
  "asynchronous",
]

[features]
default = ["send-bind"]
full = ["serde", "tower", "agnostic-lite","emit-tracing"]
serde = ["dep:serde"]
tower = ["dep:tower"]
agnostic-lite = ["dep:agnostic-lite", "send-bind"]
emit-tracing = ["dep:tracing"]
send-bind = []

[dependencies]
futures = { version = "0.3.31", default-features = false, features = ["std"] }
libc = "1.0.0-alpha.1"
rand_core = { version = "0.9" }
rand_chacha = "0.9"
pin-project-lite = "0.2.16"
priority-queue = "2.0.0"
pin-arc = "0.2.1"
cooked-waker = "5"
either = "1.15"
scopeguard = "1.2"
futures-intrusive = "0.5"
typeid = "1"
sync_wrapper = "1"
serde = { optional = true, features = ["derive"], version = "1" }
tower = { optional = true, version = "0.5.2" }
agnostic-lite = { optional = true, version = "0.5.6", features = ["time"] }
tracing = { optional = true, version = "0.1.41" }

[dev-dependencies]
getrandom = "0.3.3"
rand = "0.9"
tower = { version = "0.5.2", features = ["util"] }
