[package]
name = "deterministic_simulation_core"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "1.0.0-alpha.1"

[dependencies.reduced_rand]
version = "0.9.0"
default-features = false
path = "../rand"
features = []

[dependencies.reduced_rand_chacha]
version = "0.9.0"
default-features = false
path = "../rand/reduced_rand_chacha"
features = []

[features]
log_events = []
print_events = ["log_events"]

[patch.crates-io]
getrandom = { path = "../getrandom" }
