[package]
name = "deterministic_simulation_core"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
libc = "1.0.0-alpha.1"

[dependencies.rand_2]
version = "0.9.0"
default-features = false
path = "../rand"
features = []

[dependencies.rand_chacha_2]
version = "0.9.0"
default-features = false
path = "../rand/rand_chacha_2"
features = []

[features]
log_events = []
print_events = ["log_events"]

[patch.crates-io]
getrandom = { path = "../getrandom" }
